[gd_scene load_steps=5 format=3 uid="uid://dflte2g5hr8oy"]

[ext_resource type="Script" uid="uid://dlul66ks10fpo" path="res://piano_setup/setup_menu.gd" id="1_h8t14"]
[ext_resource type="Texture2D" uid="uid://dxngy6k2ptp5f" path="res://assets/Brown.png" id="1_q4vcb"]
[ext_resource type="Theme" uid="uid://jtqqgwbwjkiv" path="res://theme/theme.tres" id="2_h8t14"]
[ext_resource type="PackedScene" uid="uid://ca5qdb0pgigvq" path="res://scenes/confirm_dialog.tscn" id="4_migc0"]

[node name="SetupMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_h8t14")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_q4vcb")
stretch_mode = 1

[node name="Back" type="Button" parent="."]
custom_minimum_size = Vector2(0, -49)
layout_mode = 1
anchors_preset = -1
offset_left = 17.0
offset_top = 15.0
offset_right = 94.0
offset_bottom = 32.0
theme = ExtResource("2_h8t14")
text = "Back
"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -79.0
offset_top = -37.5
offset_right = 79.0
offset_bottom = 37.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="ScanDevices" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_h8t14")
text = "Scan for Devices"

[node name="ErrorLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.174173, 0.127216, 1)

[node name="ConfirmDialog" parent="." instance=ExtResource("4_migc0")]
unique_name_in_owner = true
layout_mode = 1

[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="VBoxContainer/ScanDevices" to="." method="_on_scan_devices_pressed"]
